js/js.translator/testData/incremental/invalidation/renameModule/lib1-new/l1.2.kt
inline fun foo() = 2
